<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/img_number_verification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_started"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/please_enter_your_mobile_number_to_register_as_a_service_provider"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_60" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:text="+61"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="@dimen/spacing_medium"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/grey_90"
                android:textStyle="bold">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_red"
            android:text="@string/continue_text"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>